Bug 129516 - FILEOPEN: Shape gets rotated at import time
Summary: FILEOPEN: Shape gets rotated at import time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.5.0 target:6.4.1
Keywords: bibisected, bisected, regression
: 123435 127479 132520 (view as bug list)
Depends on:
Blocks: OOXML-Shapes
  Show dependency treegraph
 
Reported: 2019-12-20 11:54 UTC by Xisco Faulí
Modified: 2020-09-03 07:44 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.5 Master (267.14 KB, image/png)
2019-12-20 11:54 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-12-20 11:54:48 UTC
Created attachment 156691 [details]
comparison MSO 2010 and LibreOffice 6.5 Master

Steps to reproduce:
1. Open attachment 99857 [details] from bug 78882

-> The plane shape on the top left corner is rotated clockwise. It should be pointing down. See attached image

reproduced in

Version: 6.5.0.0.alpha0+
Build ID: dee81fb2e1df5091702b3c8b0e4a3f2b58e89291
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-12-20 11:55:57 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9a29a4df545d7f88cd14bb99ce54f149032eb7f0

author	Miklos Vajna <vmiklos@collabora.com>	2019-10-21 21:33:36 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-10-22 08:44:02 +0200
commit 9a29a4df545d7f88cd14bb99ce54f149032eb7f0 (patch)
tree 03cdbef6aec0a3b5c9eb0702dbe888e7c4ddd0c8
parent 5b9b855c19fd8b8fb61f49e9d3d8bbf47521caee (diff)
tdf#127412 sw: fix reported ZOrder of shape+textbox pairs

Bisected with: bibisect-linux64-6.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2020-01-14 07:51:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5960c6f4ca9dd6ab4b4081d3be7253468cd212c4

tdf#129516 DOCX import: fix incorrect z-order with textboxes

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-01-14 13:25:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/0424ae2df464cbcf8997a85b53daeaded462b429

tdf#129516 DOCX import: fix incorrect z-order with textboxes

It will be available in 6.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-01-14 14:03:32 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: bcc6b77164134a1ea84f8ac2f5b8e6afa02e4228
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 5 Xisco Faulí 2020-05-11 11:30:26 UTC
*** Bug 132520 has been marked as a duplicate of this bug. ***
Comment 6 NISZ LibreOffice Team 2020-09-03 07:32:44 UTC
*** Bug 123435 has been marked as a duplicate of this bug. ***
Comment 7 NISZ LibreOffice Team 2020-09-03 07:44:24 UTC
*** Bug 127479 has been marked as a duplicate of this bug. ***